--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ fastapi==0.128.0
 uvicorn==0.40.0
 pydantic==2.12.5
 pydantic-settings==2.12.0
+# SessionMiddleware dependency
+itsdangerous==2.2.0
+
 
 # testing
 httpx==0.28.1
